# case_study_ros2_python

./: README.md
case_bringup/: package.xml  setup.cfg  setup.py
case_bringup/launch/: bringup.launch.py
case_description/: package.xml  setup.cfg  setup.py
case_description/launch/: display.launch.py
case_description/rviz/: urdf.rviz
case_description/urdf/: robot_w_screwdriver.urdf
case_gz/: package.xml  setup.cfg  setup.py
case_gz/config/: ros2_control.yaml
case_gz/launch/: robot_control.launch.py
case_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
case_moveit_config/config/: initial_positions.yaml  irb6640_205.ros2_control.xacro  irb6640_205.srdf  irb6640_205.urdf.xacro  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
case_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
case_task/: package.xml  setup.cfg  setup.py
case_task/case_task/: robot_logic.py
case_task/resource/: screw_poses.json
case_task/scripts/: pose_commander.py  utils.py
